--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <option value="1">Partido</option>
                 </select>
             </div>
-            <button id="buscar">
+            <button id="buscarIndex">
                 <a href="busca.html">Buscar</a>
             </button> <!-- Busca os deputados-->
         </div>  
