--- a/busca.html
+++ b/busca.html
@@ -47,6 +47,22 @@
         <!-- Modal content -->
         <div id="modal-content" class="modal-content">
             <span class="close">&times;</span>
+            <div>
+                <h>Selecione o ano:</h>
+                <select id="textAno">
+                    <option value="1">Ano</option>
+                </select>
+            </div>
+            <div>
+                <h>Selecione o mês:</h>
+                <select id="textMes">
+                    <option>Mês</option>
+                </select>
+            </div>
+            <button id="botaoMes">Buscar</button>
+            </br>
+            <h>Gastos do mês:</h>
+            </br>
         </div>
 
     </div>
