--- a/busca.html
+++ b/busca.html
@@ -54,19 +54,35 @@
                 <h2>Busca de despesas</h1>
                 </br>
                 <h>Selecione o ano:</h>
-                <select id="textAno">
+                <select id="comboAno">
                     <option value="1">Ano</option>
+                    <option value="2">2015</option>
+                    <option value="3">2016</option>
+                    <option value="4">2017</option>
+                    <option value="5">2018</option>
+                    <option value="6">2019</option>
+                    <option value="7">2020</option>
+                    <option value="8">2021</option>
                 </select>
                 <h>Selecione o mês:</h>
-                <select id="textMes">
+                <select id="comboMes">
                     <option>Mês</option>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                    <option>7</option>
+                    <option>8</option>
+                    <option>9</option>
+                    <option>10</option>
+                    <option>11</option>
+                    <option>12</option>
                 </select>
-                <button id="botaoMes">Buscar</button>
+                <button id="botaoGastos">Buscar</button>
             </div>
             </br>
-            <div>
-                <h>Gastos do mês:</h>
-            </div>
             </br>
         </div>
 
